[package]
name = "GooberLauncher"
version = "1.0.0"
authors = ["luna", "mathmark824", "MojaveMF"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.31" }
reqwest = { version = "0.11.22", features = ["stream"] }
md5 = "0.7.0"
zip-extract = "0.1.2"
winreg = "0.52.0"
tokio = { version = "1.35.0", features = ["full"] }
url = "2.5.0"
anyhow = "1.0.75"
indicatif = "0.17.7"
colored = "2.1.0"
crossterm = "0.27.0"
dirs = "5.0.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
futures-util = "0.3.30"
sha2 = "0.10.8"
